[project]
name = "blog"
version = "0.1"
description = "FastAPI + Streamlit, fullstack blog project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "fastapi>=0.121.2",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "httpx>=0.28.1",
    "imagekitio>=4.2.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn[standard]>=0.38.0",
]
